--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
 google-api-python-client>=2.100.0
 python-dateutil>=2.8.2
+groq>=0.4.0
+openai>=1.0.0
