--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ google-api-python-client>=2.100.0
 python-dateutil>=2.8.2
 groq>=0.4.0
 openai>=1.0.0
+pystray>=0.19.0
+Pillow>=10.0.0
+psutil>=5.9.0
+pytz>=2023.3
