--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-customtkinter==5.2.1
-google-generativeai>=0.8.0
-SpeechRecognition>=3.14.0
-pywhatkit==5.4
-pyaudio==0.2.14
-edge-tts>=6.1.9
-pygame>=2.5.0
-google-auth>=2.23.0
-google-auth-oauthlib>=1.1.0
-google-auth-httplib2>=0.1.1
-google-api-python-client>=2.100.0
-python-dateutil>=2.8.2
-groq>=0.4.0
-openai>=1.0.0
-pystray>=0.19.0
-Pillow>=10.0.0
-psutil>=5.9.0
-pytz>=2023.3
+customtkinter
+SpeechRecognition
+edge-tts
+pygame
+groq
+openai
+google-generativeai
+google-auth-oauthlib
+google-api-python-client
+pystray
+Pillow
+psutil
+python-dateutil
+pyautogui
+requests
+python-kasa
+keyboard
+pytz
+pywhatkit
