--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,9 @@ psutil==5.9.6
 keyboard==0.13.5
 setproctitle==1.3.3
 
-# Voice & Audio
+# Voice & Audio (Offline - Zero Latency)
 SpeechRecognition==3.10.0
-edge-tts==6.1.12
-pygame==2.5.2
+pyttsx3==2.90
 PyAutoGUI==0.9.54
 
 # AI Providers
