--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ setproctitle==1.3.3
 
 # Voice & Audio
 SpeechRecognition==3.10.0
-edge-tts==6.1.12
-pygame==2.5.2
+pyttsx3==2.90
 PyAutoGUI==0.9.54
 
 # AI Providers
